[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
description = "cryptographic primitives for etf"
license = "GPL3"
repository = "https://github.com/ideal-lab5/etf-sdk"
rust-version = "1.63"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

#[lib]
#crate-type = ["lib"]
#path = "src/lib.rs"

[dependencies]
# is it ok to use alloc here?
serde = { version = "1.0.160", default-features = false, features = ["derive", "alloc"] }
aes-gcm = { version = "0.10.2", default-features = false, features = ["alloc", "aes", "rand_core"] }
array-bytes = "6.1.0"
generic-array = "0.14.7"
sha2 = { version = "0.10.2", default-features = false }
sha3 = { version = "0.10.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
# arkworks dependencies
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["signature"] }

[dev-dependencies]
hex = "0.4.3"
