[package]
name = "etf-crypto-primitives"
version = "0.2.3"
edition = "2021"
description = "cryptographic primitives for etf"
license = "Apache-2.0"
repository = "https://github.com/ideal-lab5/etf-sdk"
authors = ["Tony Riemer <driemworks@idealabs.network>"]
rust-version = "1.63"
homepage = "https://idealabs.network"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.160", default-features = false, features = ["derive", "alloc"] }
aes-gcm = { version = "0.10.2", default-features = false, features = ["alloc", "aes", "rand_core"] }
array-bytes = "6.1.0"
generic-array = "0.14.7"
sha2 = { version = "0.10.2", default-features = false }
sha3 = { version = "0.10.0", default-features = false }
# arkworks dependencies
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["signature"] }
# paillier deps
# bincode = { optional = true, version = "1.3", default-features = false }
serde_json = { version = "1.0.108", default-features = false, features = ["alloc"] }
serde_cbor = {version = "0.11.2", default-features = false}
curv = { package = "curv-kzen", optional = true, git = "https://github.com/ideal-lab5/curv", default-features = false }
kzen-paillier = { optional = true, git = "https://github.com/ideal-lab5/rust-paillier", default-features = false }

[dev-dependencies]
hex = "0.4.3"
rand_chacha = "0.3.1"

[features]
default = ["std", "curv/num-bigint"]
std = [
    "ark-std/std",
    "ark-ff/std",
    "ark-poly/std",
    "ark-ec/std",
    "ark-serialize/std",
    "ark-bls12-381/std",
    "ark-crypto-primitives/std",
    "serde_json/std",
    "serde_cbor/std"
]
paillier = ["curv/num-bigint", "curv", "kzen-paillier"]
# default = ["curv/rust-gmp-kzen"]
