[package]
name = "etf-crypto-primitives"
version = "0.2.4"
edition = "2021"
description = "cryptographic primitives for etf"
license = "Apache-2.0"
repository = "https://github.com/ideal-lab5/etf-sdk"
authors = ["Tony Riemer <driemworks@idealabs.network>"]
rust-version = "1.63"
homepage = "https://idealabs.network"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.160", default-features = false, features = ["derive", "alloc"] }
aes-gcm = { version = "0.10.2", default-features = false, features = ["alloc", "aes", "rand_core"] }
array-bytes = "6.1.0"
generic-array = "0.14.7"
sha2 = { version = "0.10.2", default-features = false }
sha3 = { version = "0.10.0", default-features = false }
# arkworks dependencies
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }

ark-serialize = { version = "0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-bls12-377 = { version = "0.4.0", features = ["curve"], default-features = false }

serde_json = { version = "1.0.108", default-features = false, features = ["alloc"] }
serde_cbor = {version = "0.11.2", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false}

rand_chacha = { version = "0.3.1", default-features = false }
w3f-bls = { version = "0.1.3", default-features = false }

[dev-dependencies]
hex = "0.4.3"
ark-ed-on-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "r1cs" ] }
rand_core = "0.6.4"
simulacrum = "0.3.0"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "acss"
harness = false

[[bench]]
name = "tlock_single_commitee_dynamic_data"
harness = false

[[bench]]
name = "tlock_dynamic_committee_static_data"
harness = false

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sha2/std",
    "sha3/std",
    "ark-std/std",
    "ark-ff/std",
    "ark-poly/std",
    "ark-ec/std",
    "ark-serialize/std",
    "ark-bls12-381/std",
    "serde_json/std",
    "serde_cbor/std",
    "rand_chacha/std",
    "chacha20poly1305/std",
    "w3f-bls/std",
]
